--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,8 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbfezZ4bibfz8_TFLIlwbf6Qyfrm9_pIs&libraries=places"></script>
+
 </head>
 
 <body>
